sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/OISectionCondition__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13227 : Onboarding Inputs Epic</description>
    <label>OISectionCondition</label>
    <pluralLabel>OISectionCondition</pluralLabel>
</CustomObject>