sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALES FORM</fullName>
            </value>
            <value>
                <fullName>Mx FORM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>