sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Is_it_Store_Section__c.field-meta.xml
<CustomField>
    <fullName>Is_it_Store_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it Store Section?</label>
    <type>Checkbox</type>
</CustomField>