sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Is_Mx_Input_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Mx_Input_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Mx Input Needed?</label>
    <type>Checkbox</type>
</CustomField>