sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Mx_Input_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Mx_Input_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-15113: It is used to determine if MX inputs are needed or not.</description>
    <label>Mx Input Not Needed</label>
    <type>Checkbox</type>
</CustomField>