sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Onboarding_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Scenario__c</fullName>
    <label>Onboarding Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net-New</fullName>
            </value>
            <value>
                <fullName>Product Addition</fullName>
            </value>
            <value>
                <fullName>NSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>