sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Order_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol__c</fullName>
    <label>Order Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>