sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Products_on_Contract__c.field-meta.xml
<CustomField>
    <fullName>Products_on_Contract__c</fullName>
    <label>Products on Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>