sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Rep_Filling_on_Mx_Behalf__c.field-meta.xml
<CustomField>
    <fullName>Rep_Filling_on_Mx_Behalf__c</fullName>
    <label>Rep Filling on Mx Behalf?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>