sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Seattle__c.field-meta.xml
<CustomField>
    <fullName>Seattle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seattle</label>
    <type>Checkbox</type>
</CustomField>