sfdx-source/force-app/main/default/objects/OISectionCondition__mdt/fields/Store_Section_For_No_Rep_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Store_Section_For_No_Rep_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Section For No Rep Scenario</label>
    <type>Checkbox</type>
</CustomField>